2007-01-21  Damon Chaplin  <damon@gnome.org>

	* gtk-doc-manual.xml: document "@include:" tag. #395023

2006-12-10  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* gtk-doc-manual.xml: Spelling fixes.

2006-10-13  Damon Chaplin  <damon@gnome.org>

	* gtk-doc-manual.xml: use "GNOME" instead of "Gnome". (#352160)

2006-03-24  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc-manual.xml:
	correct format of new shortcuts

2006-03-21  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc-manual.xml:
	document signal and property link short cuts

2005-12-09  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc-manual-C.omf.in:
	* gtk-doc-manual.xml:
	  added more details about doc-comments
	  added section about revision control systems

2005-09-07  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc-manual.xml:
	  integrated most of the notes from the text files under doc/*.txt

2005-08-24  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc-manual.xml:
          more notes in the faq
          setup chapter is nearly complete
          more notes about doc comment format

2005-08-15  Stefan Kost  <ensonic@users.sf.net>

	* .cvsignore:
	* ChangeLog:
	* Makefile:
	* Makefile.am:
	* fdl-appendix.xml:
	* gtk-doc-manual-C.omf.in:
	* gtk-doc-manual.xml:
          reanimated gtkdoc manual
          added new chapters

2004-05-07	Geert Stappers <stappers@stappers.nl>

	* README: new file.
	* gtk-doc-manual.sgml: Deleted.
	* fdl-appendix.sgml: Deleted.

2004-05-06	Geert Stappers <stappers@stappers.nl>

	* gtk-doc-manual.xml: repaired the crossreference to FDL

	* Makefile: new file, to "document" the build process.

2004-05-06	Keith Sharp <kms@passback.co.uk>

	* gtk-doc-manual.xml: New file, XML version of
	  gtk-doc-manual.sgml
	* fdl-appendix.xml: New file, XML version of
	  fdl-appendix.sgml

2000-11-26	Dan Mueth <d-mueth@uchicago.edu>

	* gtk-doc-manual.sgml: Committing changes made by
	Chris Lyttle <chris@wilddev.net>.  (Text for Chapter 1)

2000-11-25	Dan Mueth <d-mueth@uchicago.edu>
