@@ -1,3 +1,8 @@
+2007-06-11  Damon Chaplin  <damon@gnome.org>
+
+	* gtk-doc-manual.xml: added tip about using entities like &num; to
+	use a '#' without gtk-doc changing it. (Part of #445596)
+
 2007-01-21  Damon Chaplin  <damon@gnome.org>
 
 	* gtk-doc-manual.xml: document "@include:" tag. #395023
